--- a/WebApplication1/Web.config
+++ b/WebApplication1/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-WebApplication1-20160711012703.mdf;Initial Catalog=aspnet-WebApplication1-20160711012703;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="QSPrototypeEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SANSAN\SQL2012DEV;initial catalog=QSPrototype;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="QSPrototypeEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <system.web>
     <authentication mode="None" />
