--- a/WebApplication1/Web.config
+++ b/WebApplication1/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -9,8 +9,12 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-WebApplication1-20160711012703.mdf;Initial Catalog=aspnet-WebApplication1-20160711012703;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="QSPrototypeEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SANSAN\SQL2012DEV;initial catalog=QSPrototype;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-WebApplication1-20160711012703.mdf;Initial Catalog=aspnet-WebApplication1-20160711012703;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+    <add name="QSPrototypeEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SANSAN\SQL2012DEV;initial catalog=QSPrototype;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+      providerName="System.Data.EntityClient" />
+    <add name="QSPrototypeConnectionString" connectionString="Data Source=SANSAN\SQL2012DEV;Initial Catalog=QSPrototype;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <authentication mode="None" />
