--- a/WebApplication1/Web.config
+++ b/WebApplication1/Web.config
@@ -11,9 +11,9 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-WebApplication1-20160711012703.mdf;Initial Catalog=aspnet-WebApplication1-20160711012703;Integrated Security=True"
       providerName="System.Data.SqlClient" />
-    <add name="QSPrototypeEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SANSAN\SQL2012DEV;initial catalog=QSPrototype;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+    <add name="QSPrototypeEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;&quot;"
       providerName="System.Data.EntityClient" />
-    <add name="QSPrototypeConnectionString" connectionString="Data Source=SANSAN\SQL2012DEV;Initial Catalog=QSPrototype;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework"
+    <add name="QSPrototypeConnectionString" connectionString=""
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
